# daberiba

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.tools  README.md  compose.yml  dev  handover.md  justfile  podman-compose.yml
.claude/: pre-pr-check.sh  settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.sqlx/: query-043744772284e58a337d48cf6661f6e1a2dc3e490d09a18311af00cffacabd68.json  query-05f5460d1597f161cb91dcbf6959b1432aa6c704a72473e7b73d6d37b78db557.json  query-0cb54b44e56e858493d8670a12a13fd8250f8453078687f1e80f3765a981f77a.json  query-0d0616b8512e96c41c9f2c06532af8293568e5b7e9ffd78457cd57c83c6518ed.json  query-27f7b4b3ce3a7a3d53a875d7832780cf594f7a700ef4c3363c26cbacd78a8c8d.json  query-2c3151775f65192a51325a0fefba86ea2bf058f52ab60f8084ff491e7139ec1a.json  query-2d0cec07e62e7cc00a4a32affcb5f0cacd4d5588a57b606b3c52dae0b49a2394.json  query-376c2522ea7ea35463b9bb0cfe0f9f4d1f45c77360e27b360a3d927688fad8e5.json  query-3e8fb88f5f3cb00d748b5f414c326984da2ccfcff343ccfeffc6e9225bbd268e.json  query-49c18d7198e8d25d75868470b619998f147bdfa5b2ae0f4772eb91eff9f268fa.json  query-4ff9597a80fa6a4e03e4ef0cbb7621ae5e03bba12109350e03a57616470b9a2c.json  query-55f843176c5bb11c8357812752de37b7994610a151ed9f07a4aa642f9473c067.json  query-5b9f5c61b8ef2cb716c40e9dd2b3da9b761eafb1cce4a5d3071a70bc7c7dfda7.json  query-5f68d343352e1936b201de34b3cfa8a92c1c15da896f6430be0e1fa02d7213ea.json  query-637a0bb91091e07f3b747f900e8d366bcd7761c35f20372e76b580b22acf1d53.json  query-64e7594c86069ef18a3493515a4b12744d1ff29ecee6a116704233bce8f5fc20.json  query-6ab10180c2be9fce291b4b44558926cfe2f1da03d4db5256226b834a623ba1dc.json  query-6bccf4d930b1603d7df48cdbc605dc9095185b0fdcc5bf3613966699a9e67577.json  query-70f329319e0749e92d8e9ab8955aa45a0751dceb4876ac957b6df7c845e97271.json  query-71dcd20ca0b05bb1fd916216554e81997a947459b792c1262f296e784e585f96.json  query-739c3757cd4e1db9db4552c7b51b2d9ea16b5e345c8c2041482575a000ee58e7.json  query-78ff7d9977d0b42737a97b0c99f1c724d0ab5572b59ecb6d77ccab03553b4d36.json  query-7943652c0025277beac1764b1e1dac512dd0648fe1ff347cd7e79b8423ddd22c.json  query-7b526fcd007304b5e74f34a74833dac1225e525715f86c4fb55e73b4700e97b1.json  query-8183b2809c70a871fef42b3b1662656e89d2281f1c8fb3cff1c81ae68b05dc0c.json  query-93da8b3b32df52304c07ff77a94f544a69f8861fd59e493d6f09caf15979cc46.json  (+15 more)
crates/db/: Cargo.toml
crates/db/src/: access_tokens.rs  account_data.rs  devices.rs  events.rs  filters.rs  keys.rs  lib.rs  login_tokens.rs  media.rs  notifications.rs  openid_tokens.rs  presence.rs  profile.rs  pushers.rs  receipts.rs  relations.rs  reports.rs  room_aliases.rs  room_keys.rs  room_state.rs  room_tags.rs  rooms.rs  sent_transactions.rs  server_signing_key.rs  sso.rs  sync.rs  threepids.rs  to_device.rs  unread.rs  users.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  federation_client.rs  filter.rs  main.rs  media_store.rs  push_eval.rs  router.rs  signing_key.rs  sso.rs  state.rs  state_res.rs  typing_store.rs  uia.rs  xmatrix.rs
crates/server/src/api/: media.rs  mod.rs  server_keys.rs
crates/server/src/api/client/: account.rs  account_data.rs  admin.rs  auth.rs  capabilities.rs  devices.rs  events.rs  filters.rs  global_events.rs  hierarchy.rs  initial_sync.rs  keys.rs  mod.rs  notifications.rs  openid.rs  presence.rs  profile.rs  public_rooms.rs  push_rules.rs  pushers.rs  read_markers.rs  receipts.rs  relations.rs  room_aliases.rs  room_keys.rs  room_state.rs  room_summary.rs  room_tags.rs  rooms.rs  search.rs  sync.rs  thirdparty.rs  threads.rs  threepids.rs  timestamp_to_event.rs  to_device.rs  typing_notif.rs  user_directory.rs  versions.rs  wellknown.rs
crates/server/src/api/federation/: backfill.rs  get_event.rs  invite.rs  make_join.rs  make_leave.rs  mod.rs  openid.rs  query.rs  send_join.rs  send_leave.rs  send_transaction.rs  version.rs
crates/server/src/middleware/: auth.rs
crates/server/src/tests/: mod.rs
front/: .gitignore  handover.md  index.html  package.json  (+2 more)
(+42 files in other folders)
