[workspace]
members = [
    "crates/server",
    "crates/db",
]
resolver = "2"

[workspace.package]
version = "0.41.0"
edition = "2021"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
dotenvy = "0.15"
async-trait = "0.1"
bytes = "1"
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
