[package]
name = "server"
version = "0.2.1"
edition = "2021"

[dependencies]
db = { path = "../db" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
url = "2"
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
