[package]
name = "server"
version = "0.5.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
url = "2"
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[features]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
